# bachelors

./: .gitmodules  Makefile  benchmark_ellapsed_times.txt  config.h  config.ini  cuda_examples.cuh  gl.h  log.h  main.cpp  plot.py  simulation.cu  simulation.h
allen_cahn/: .gitignore  Makefile  allen_cahn.sln  allen_cahn.vcxproj  allen_cahn.vcxproj.filters  assert.h  cojugate_gradient.c  config.h  config.ini  config_base.ini  config_exact.ini  config_fast.ini  cuda_alloc.cuh  cuda_examples.cuh  cuda_for.cuh  cuda_launch.cuh  cuda_random.cuh  cuda_reduction.cuh  cuda_util.cuh  defines.h  exact.h  gl.h  gl_shader_util.h  integration_methods.h  kernel.cu  kernel.h  log.h  main.c  main.cpp  plot.py  simulation.cu  simulation.h
allen_cahn_cuda/: .gitignore  CMakeLists.txt  Makefile  Makefile_cuda  _CMakeLists.txt  build.text  config.h  config.lpf  config2.lpf  cuda_test.vcxproj  cuda_test.vcxproj.filters  cuda_util.cuh  cuda_util.h  cuprintf.cu  cuprintf.cuh  cuprintf.h  gl_utils  integration_methods.h  kernel.cu  kernel.h  lib  main.c  main_opengl.c  main_platform_dev.c  render.h  temp.h
allen_cahn_cuda/shaders/: allen_cahn.comp  heat_trasnfer.comp
benchmark_configs/: config_cpu_1024  config_cpu_128  config_cpu_2048  config_cpu_256  config_cpu_512  config_explicit-rk4-adaptive_1024.ini  config_explicit-rk4-adaptive_128.ini  config_explicit-rk4-adaptive_2048.ini  config_explicit-rk4-adaptive_256.ini  config_explicit-rk4-adaptive_512.ini  config_explicit-rk4_1024.ini  config_explicit-rk4_128.ini  config_explicit-rk4_2048.ini  config_explicit-rk4_256.ini  generator.py  (+31 more)
(+30 files in other folders)
